<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/windowBackground"
    tools:context=".login.PasswordResetPopUpActivity">

    <ImageView
        android:id="@+id/iv_pr_close_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_separator"
        android:layout_marginEnd="@dimen/medium_separator"
        android:src="@drawable/ic_close_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_logo_password_reset"
        android:layout_width="@dimen/popUpLogoWidthHeight"
        android:layout_height="@dimen/popUpLogoWidthHeight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <include
            layout="@layout/sign_in_logo"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_pr_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_separator"
        android:text="@string/pr_title"
        android:textStyle="bold"
        style="@style/NormalTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_logo_password_reset" />


    <TextView
        android:id="@+id/tv_pr_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_separator"
        tools:text="@string/error_correo_existente"
        style="@style/ErrorTextStyle"
        tools:visibility="visible"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pr_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tIL_pr_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_separator"
        android:layout_marginEnd="@dimen/medium_separator"
        app:hintTextColor="@color/animated_hint_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pr_error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pr_correo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="@dimen/editText_drawable_padding"
            android:hint="@string/pr_email_hint"
            android:inputType="textEmailAddress"
            style="@style/EditTextNormal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/b_pr_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pr_send"
        android:layout_marginTop="@dimen/medium_separator"
        android:layout_marginBottom="@dimen/top_separator"
        style="@style/ButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tIL_pr_email"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>