<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.FirebaseAuthLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_logo_fb_auth_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_top_separator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <include
                    layout="@layout/sign_in_logo"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fb_auth_separator"
                tools:text="Error message"
                android:visibility="invisible"
                tools:visibility="visible"
                style="@style/ErrorTextStyle"
                app:layout_constraintTop_toBottomOf="@id/ll_logo_fb_auth_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/ll_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/medium_separator"
                android:layout_marginStart="@dimen/top_separator"
                android:layout_marginEnd="@dimen/top_separator"
                app:layout_constraintTop_toBottomOf="@id/tv_errorMessage">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tIL_email"
                    android:layout_marginStart="@dimen/medium_separator"
                    app:hintTextColor="@color/animated_hint_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_correo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_mail"
                        android:drawablePadding="@dimen/button_drawable_padding"
                        android:hint="@string/fbAuth_correo"
                        android:inputType="textEmailAddress"
                        style="@style/EditTextNormal"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_separator"
                android:layout_marginStart="@dimen/top_separator"
                android:layout_marginEnd="@dimen/top_separator"
                app:layout_constraintTop_toBottomOf="@id/ll_email"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tIL_password"
                    android:layout_marginStart="@dimen/medium_separator"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:passwordToggleTint="@color/blueIconColor"
                    app:hintTextColor="@color/animated_hint_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:paddingTop="0dp"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="@dimen/button_drawable_padding"
                        android:hint="@string/fbAuth_password"
                        style="@style/EditTextNormal"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_separator"
                    android:layout_marginEnd="@dimen/top_separator"
                    android:layout_gravity="end"
                    style="@style/NormalTextStyle"
                    android:text="@string/fbAuth_forgot_password"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_separator"
                android:paddingStart="@dimen/button_left"
                android:paddingEnd="@dimen/button_right"
                android:paddingTop="@dimen/button_top"
                android:paddingBottom="@dimen/button_bottom"
                android:text="@string/fbAuth_ingresar"
                android:textSize="@dimen/button_text_size"
                style="@style/ButtonStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_password"/>

            <TextView
                android:id="@+id/tv_crearCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_separator"
                style="@style/NormalTextStyle"
                android:text="@string/fbAuth_crear_cuenta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_ingresar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>