<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_logo_fb_auth_createAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_top_separator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <include
                    layout="@layout/sign_in_logo"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_creaTuCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_separator"
                android:text="@string/cc_crea_tu_cuenta"
                style="@style/NormalTextStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_logo_fb_auth_createAccount"/>

            <TextView
                android:id="@+id/tv_ccMensajeDeError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_separator"
                tools:text="Mensaje de error"
                android:textColor="@color/red"
                android:visibility="gone"
                tools:visibility="visible"
                style="@style/ErrorTextStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_creaTuCuenta"/>

            <LinearLayout
                android:id="@+id/ll_cc_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cc_top_separator"
                android:layout_marginStart="@dimen/top_separator"
                android:layout_marginEnd="@dimen/top_separator"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_creaTuCuenta">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tIL_cc_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/animated_hint_color"
                    android:layout_marginStart="@dimen/medium_separator"
                    android:layout_marginEnd="@dimen/medium_separator">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_cc_correo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart ="@drawable/ic_mail"
                        android:drawablePadding="@dimen/editText_drawable_padding"
                        android:hint="@string/cc_correo"
                        android:inputType="textEmailAddress"
                        style="@style/EditTextNormal"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cc_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_separator"
                android:layout_marginStart="@dimen/top_separator"
                android:layout_marginEnd="@dimen/top_separator"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_cc_correo">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tIL_cc_password"
                    android:layout_marginStart="@dimen/medium_separator"
                    android:layout_marginEnd="@dimen/medium_separator"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:passwordToggleTint="@color/blueIconColor"
                    app:hintTextColor="@color/animated_hint_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_cc_contrasena"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="@dimen/editText_drawable_padding"
                        android:hint="@string/cc_contrasena"
                        style="@style/EditTextNormal"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cc_verifica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_separator"
                android:layout_marginStart="@dimen/top_separator"
                android:layout_marginEnd="@dimen/top_separator"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_cc_contrasena">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tIL_cc_verifica"
                    android:layout_marginStart="@dimen/medium_separator"
                    android:layout_marginEnd="@dimen/medium_separator"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:passwordToggleTint="@color/blueIconColor"
                    app:hintTextColor="@color/animated_hint_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_cc_verifica"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/editText_drawable_padding"
                    android:hint="@string/cc_verifica_contrasena"
                    style="@style/EditTextNormal"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cc_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_separator"
                android:layout_marginStart="@dimen/top_separator"
                android:layout_marginEnd="@dimen/top_separator"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_cc_verifica">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tIL_cc_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/animated_hint_color"
                    android:layout_marginStart="@dimen/medium_separator"
                    android:layout_marginEnd="@dimen/medium_separator">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_cc_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart ="@drawable/ic_person"
                        android:drawablePadding="@dimen/editText_drawable_padding"
                        android:hint="@string/cc_nombre"
                        android:inputType="text"
                        style="@style/EditTextNormal"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cc_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_separator"
                android:layout_marginStart="@dimen/top_separator"
                android:layout_marginEnd="@dimen/top_separator"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_cc_nombre">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tIL_cc_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/animated_hint_color"
                    android:layout_marginStart="@dimen/medium_separator"
                    android:layout_marginEnd="@dimen/medium_separator">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_cc_apellido"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart ="@drawable/ic_person"
                        android:drawablePadding="@dimen/editText_drawable_padding"
                        android:hint="@string/cc_apellido"
                        android:inputType="text"
                        style="@style/EditTextNormal"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_crea_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_separator"
                android:paddingStart="@dimen/button_right"
                android:paddingEnd="@dimen/button_left"
                android:paddingTop="@dimen/button_top"
                android:paddingBottom="@dimen/button_bottom"
                style="@style/ButtonStyle"
                android:text="@string/cc_crea_tu_cuenta"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_cc_apellido"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>